feat(secrets): enforce ESO/Vault defaults and automation
- enable eso-vault-examples by default, add toy-web ExternalSecret, create vault-auth SA.
- add External Secrets operator Subscription via bootstrap chart and wait for CSV/CRDs.
- update toy-service/toy-web charts to require secret-backed env and extend unit tests.
- render ESO during validate; add dev-vault helper script and Makefile targets.
- refresh docs/runbooks to reflect mandatory ESO usage and local Vault workflow.

--- a/charts/bootstrap-operators/values.yaml
+++ b/charts/bootstrap-operators/values.yaml
@@ -18,6 +18,16 @@ operators:
     startingCSV: ""
     approval: Automatic
 
+  externalSecrets:
+    channel: stable
+    name: external-secrets-operator
+    source: redhat-operators
+    sourceNamespace: openshift-marketplace
+    installNamespace: external-secrets-operator
+    startingCSV: ""
+    approval: Automatic
+    createNamespace: true
+
 argoInstance:
   create: false                 # If true, create a user-defined ArgoCD instance
   name: example
