--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -21,6 +21,13 @@ imageUpdater:
   toyWeb:
     pause: false
 
+# Vault operators integration (disabled by default until migration completes)
+vault:
+  runtime:
+    enabled: false
+  config:
+    enabled: false
+
 # Sample app images (Image Updater watches these)
 # Use Quay for easier public tag discovery in local e2e
 sampleAppImages:
