feat: gate ESO app when VSO is enabled; add optional VSO path to dev-vault (VAULT_OPERATORS=true)

--- a/charts/bitiq-umbrella/templates/app-eso-vault-examples.yaml
+++ b/charts/bitiq-umbrella/templates/app-eso-vault-examples.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.vault.runtime.enabled }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -21,6 +22,7 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+{{- end }}
 {{- if .Values.vault.runtime.enabled }}
 ---
 apiVersion: argoproj.io/v1alpha1
