--- a/charts/vault-runtime/templates/20-secrets-app.yaml
+++ b/charts/vault-runtime/templates/20-secrets-app.yaml
@@ -16,6 +16,13 @@ spec:
     overwrite: true
     name: {{ $svc.destinationName }}
   vaultAuthRef: k8s
+  {{- if and $svc.restartTargets $svc.restartTargets.enabled $svc.restartTargets.items }}
+  rolloutRestartTargets:
+  {{- range $t := $svc.restartTargets.items }}
+    - kind: {{ $t.kind }}
+      name: {{ $t.name }}
+  {{- end }}
+  {{- end }}
 {{- end }}
 
 {{- $web := .Values.secrets.toyWebConfig -}}
@@ -37,4 +44,3 @@ spec:
   vaultAuthRef: k8s
 {{- end }}
 {{- end }}
-
