--- a/charts/toy-web/templates/deployment.yaml
+++ b/charts/toy-web/templates/deployment.yaml
@@ -21,6 +21,13 @@ spec:
       labels:
         app.kubernetes.io/name: toy-web
     spec:
+      {{- $mount := .Values.frontend.secretMount }}
+      {{- if and $mount.enabled (default true $mount.mainContainerMount) }}
+      volumes:
+        - name: frontend-secret
+          secret:
+            secretName: {{ $frontendSecretName | quote }}
+      {{- end }}
       containers:
         - name: toy-web
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -40,6 +47,12 @@ spec:
             initialDelaySeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          {{- if and $mount.enabled (default true $mount.mainContainerMount) }}
+          volumeMounts:
+            - name: frontend-secret
+              mountPath: {{ default "/etc/frontend-secret" $mount.mountPath | quote }}
+              readOnly: true
+          {{- end }}
           {{- if $renderFrontendEnv }}
           env:
             {{- range $entry := $frontendEnv }}
@@ -65,6 +78,21 @@ spec:
             {{- end }}
             {{- end }}
           {{- end }}
+      {{- if and $mount.enabled (default false $mount.reloadSidecar.enabled) }}
+      - name: configmap-reload
+        image: {{ default "ghcr.io/jimmidyson/configmap-reload:latest" $mount.reloadSidecar.image }}
+        imagePullPolicy: IfNotPresent
+        args:
+          - --volume-dir={{ default "/etc/frontend-secret" $mount.mountPath }}
+          {{- if $mount.reloadSidecar.webhookUrl }}
+          - --webhook-url={{ $mount.reloadSidecar.webhookUrl }}
+          - --webhook-method={{ default "POST" $mount.reloadSidecar.webhookMethod }}
+          {{- end }}
+        volumeMounts:
+          - name: frontend-secret
+            mountPath: {{ default "/etc/frontend-secret" $mount.mountPath | quote }}
+            readOnly: true
+      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
