fix(operators): honor VAULT_OPERATORS=true by gating ESO
- bootstrap: set operators.externalSecrets.enabled=false when VAULT_OPERATORS=true; skip ESO Subscription/CRD waits
- bootstrap-operators chart: add externalSecrets.enabled flag; template condition on enabled
- local-e2e: update logs to reflect VSO/VCO vs ESO

Validation: make validate passes locally

--- a/charts/bootstrap-operators/values.yaml
+++ b/charts/bootstrap-operators/values.yaml
@@ -19,6 +19,7 @@ operators:
     approval: Automatic
 
   externalSecrets:
+    enabled: true
     channel: stable
     name: external-secrets-operator
     source: redhat-operators
