--- a/charts/bootstrap-operators/templates/subscription-eso.yaml
+++ b/charts/bootstrap-operators/templates/subscription-eso.yaml
@@ -1,5 +1,5 @@
 {{- $eso := .Values.operators.externalSecrets -}}
-{{- if $eso }}
+{{- if and $eso (default true $eso.enabled) }}
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
