fix(operators): correct VSO package and catalog
- Use package name vault-secrets-operator (matches Certified Operators catalog)
- Default CatalogSource to certified-operators (was redhat-operators)
- Update bootstrap wait defaults and docs verification commands

Validation: make validate passes locally

--- a/charts/bootstrap-operators/values.yaml
+++ b/charts/bootstrap-operators/values.yaml
@@ -31,8 +31,8 @@ operators:
 
   vso:
     channel: stable
-    name: hashicorp-vault-secrets-operator
-    source: redhat-operators
+    name: vault-secrets-operator
+    source: certified-operators
     sourceNamespace: openshift-marketplace
     installNamespace: hashicorp-vault-secrets-operator
     startingCSV: ""
