fix(operators): use VCO alpha channel; clean up ESO when VSO enabled
- VCO: channel alpha (community-operators) to match available package channels
- bootstrap: best-effort delete ESO Subscription when VAULT_OPERATORS=true to avoid resolution spam
- docs: matrix reflects VCO alpha channel

Validation: make validate passes locally

--- a/charts/bootstrap-operators/values.yaml
+++ b/charts/bootstrap-operators/values.yaml
@@ -40,7 +40,7 @@ operators:
     createNamespace: true
 
   vco:
-    channel: stable
+    channel: alpha
     name: vault-config-operator
     source: community-operators
     sourceNamespace: openshift-marketplace
