chore(dev-vault): run Vault dev under restricted SCC and seed kv paths/keys
- Add SKIP_SETCAP, VAULT_DISABLE_MLOCK, HOME=/tmp so dev Vault runs on OpenShift Restricted SCC
- Ensure kv-v2 mount 'gitops' exists; seed correct kv paths (no /data) and keys
- Add ClusterRoleBinding for tokenreviews; broaden role binding for local namespaces
- Seed argocd.token and API_BASE_URL keys to match consumers
- Doc: add DEV_VAULT_IMAGE override note

--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -69,8 +69,9 @@ spec:
 {{- $triggerAccumulator := dict "items" (list) }}
 {{- range $idx, $pipeline := .Values.pipelines }}
 {{- $events := $pipeline.eventTypes | default (list "push" "pull_request") -}}
+{{- $githubSecretKey := $root.Values.triggers.secretKey | default "token" -}}
 {{- $githubParams := list
-  (dict "name" "secretRef" "value" (dict "secretName" $root.Values.triggers.githubSecretName "secretKey" "secretToken"))
+  (dict "name" "secretRef" "value" (dict "secretName" $root.Values.triggers.githubSecretName "secretKey" $githubSecretKey))
   (dict "name" "eventTypes" "value" $events)
 }}
 {{- $interceptors := list (dict "ref" (dict "name" "github") "params" $githubParams) }}
