--- a/charts/vault-runtime/templates/10-secrets-platform.yaml
+++ b/charts/vault-runtime/templates/10-secrets-platform.yaml
@@ -10,9 +10,9 @@ apiVersion: secrets.hashicorp.com/v1beta1
 kind: VaultStaticSecret
 metadata:
   name: {{ $argocd.destinationName }}
-  namespace: {{ $argocd.namespace }}
+  namespace: {{ .Values.namespaces.gitops }}
 spec:
-  mount: kv
+  mount: gitops
   type: kv-v2
   path: {{ $argocd.path }}
   destination:
@@ -30,9 +30,9 @@ apiVersion: secrets.hashicorp.com/v1beta1
 kind: VaultStaticSecret
 metadata:
   name: {{ $quay.destinationName }}
-  namespace: {{ $quay.namespace }}
+  namespace: {{ .Values.namespaces.pipelines }}
 spec:
-  mount: kv
+  mount: gitops
   type: kv-v2
   path: {{ $quay.path }}
   destination:
@@ -40,11 +40,6 @@ spec:
     overwrite: true
     name: {{ $quay.destinationName }}
     type: {{ $quay.type | default "Opaque" }}
-    transformation:
-      templates:
-        .dockerconfigjson:
-          text: |
-            {{`{{ index . "`}}{{ $quay.sourceKey | default "dockerconfigjson" }}{{`" }}`}}
   vaultAuthRef: k8s
 {{- end }}
 
@@ -55,9 +50,9 @@ apiVersion: secrets.hashicorp.com/v1beta1
 kind: VaultStaticSecret
 metadata:
   name: {{ $gh.destinationName }}
-  namespace: {{ $gh.namespace }}
+  namespace: {{ .Values.namespaces.pipelines }}
 spec:
-  mount: kv
+  mount: gitops
   type: kv-v2
   path: {{ $gh.path }}
   destination:
@@ -68,4 +63,3 @@ spec:
   vaultAuthRef: k8s
 {{- end }}
 {{- end }}
-
