--- a/charts/vault-runtime/templates/20-secrets-app.yaml
+++ b/charts/vault-runtime/templates/20-secrets-app.yaml
@@ -6,9 +6,9 @@ apiVersion: secrets.hashicorp.com/v1beta1
 kind: VaultStaticSecret
 metadata:
   name: {{ $svc.destinationName }}
-  namespace: {{ $svc.namespace }}
+  namespace: {{ .Values.namespaces.app }}
 spec:
-  mount: kv
+  mount: gitops
   type: kv-v2
   path: {{ $svc.path }}
   destination:
@@ -32,9 +32,9 @@ apiVersion: secrets.hashicorp.com/v1beta1
 kind: VaultStaticSecret
 metadata:
   name: {{ $web.destinationName }}
-  namespace: {{ $web.namespace }}
+  namespace: {{ .Values.namespaces.app }}
 spec:
-  mount: kv
+  mount: gitops
   type: kv-v2
   path: {{ $web.path }}
   destination:
