fix(vault-config): render targetNamespaces as object with nested list
- VCO CRD expects spec.targetNamespaces to be a struct (TargetNamespaceConfig)
  with field targetNamespaces: []string or targetNamespaceSelector
- Update template to wrap values under targetNamespaces.targetNamespaces

--- a/charts/vault-config/templates/20-k8s-auth-role.yaml
+++ b/charts/vault-config/templates/20-k8s-auth-role.yaml
@@ -24,9 +24,9 @@ spec:
     - {{ $sa }}
 {{- end }}
   targetNamespaces:
+    targetNamespaces:
 {{- range $ns := $r.targetNamespaces }}
-    - {{ $ns }}
+      - {{ $ns }}
 {{- end }}
 {{- end }}
 {{- end }}
-
