feat(vault-config): set authentication.serviceAccount.name from values (default: default)
- Make VCO authenticate with expected SA matching Vault role binding
- Keeps path/role the same

--- a/charts/vault-config/templates/10-k8s-auth-config.yaml
+++ b/charts/vault-config/templates/10-k8s-auth-config.yaml
@@ -9,8 +9,9 @@ spec:
   authentication:
     path: {{ .Values.vault.mountPath }}
     role: {{ .Values.vault.connectionRole }}
+    serviceAccount:
+      name: {{ .Values.vault.serviceAccountName | default "default" }}
   connection:
     address: {{ .Values.vault.address | quote }}
   kubernetesHost: {{ .Values.vault.kubernetesHost | quote }}
 {{- end }}
-
