--- a/charts/vault-config/templates/20-k8s-auth-role.yaml
+++ b/charts/vault-config/templates/20-k8s-auth-role.yaml
@@ -13,6 +13,8 @@ spec:
   authentication:
     path: {{ $mp }}
     role: {{ $role }}
+    serviceAccount:
+      name: {{ $.Values.vault.serviceAccountName | default "default" }}
   connection:
     address: {{ $addr | quote }}
   policies:
