--- a/charts/vault-config/templates/20-k8s-auth-role.yaml
+++ b/charts/vault-config/templates/20-k8s-auth-role.yaml
@@ -15,6 +15,8 @@ spec:
     role: {{ $role }}
     serviceAccount:
       name: {{ $.Values.vault.serviceAccountName | default "default" }}
+  # Explicit Vault path for the role (mount path)
+  path: {{ $mp }}
   connection:
     address: {{ $addr | quote }}
   policies:
