--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -38,7 +38,7 @@ ciPipelines:
     route: true
   pipelines:
     - name: bitiq-build-and-push
-      gitUrl: https://github.com/PaulCapestany/toy-service.git
+      gitUrl: https://github.com/bitiq-io/toy-service.git
       gitRevision: main
       dockerfile: Dockerfile
       contextDir: .
@@ -46,14 +46,17 @@ ciPipelines:
       imageNamespace: paulcapestany
       imageName: toy-service
       tlsVerify: "true"
-      repoFullName: PaulCapestany/toy-service
+      # Accept either personal or org repo full name
+      repoFullNames:
+        - PaulCapestany/toy-service
+        - bitiq-io/toy-service
       runTests: "true"
       testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
       testScript: |
         go test ./...
       eventTypes: ["push"]
     - name: bitiq-web-build-and-push
-      gitUrl: https://github.com/PaulCapestany/toy-web.git
+      gitUrl: https://github.com/bitiq-io/toy-web.git
       gitRevision: main
       dockerfile: Dockerfile
       contextDir: .
@@ -61,7 +64,9 @@ ciPipelines:
       imageNamespace: paulcapestany
       imageName: toy-web
       tlsVerify: "true"
-      repoFullName: PaulCapestany/toy-web
+      repoFullNames:
+        - PaulCapestany/toy-web
+        - bitiq-io/toy-web
       runTests: "true"
       testImage: registry.access.redhat.com/ubi9/nodejs-20:1-1758500456
       testScript: |
