fix(vault): align local role/policy names and avoid immutable updates
- Add Argo sync options Force=true,Replace=true to KubernetesAuthEngineRole to recreate on spec.path changes (immutable in VCO)
- Set local env vaultRuntimeRoleName=gitops-local (was gitops-prod)
- Update dev-vault helper to create/use gitops-local policy and role
- Align ESO examples auth.role to gitops-local

This removes prod-only assumptions for local and keeps VSO/VCO in sync.

--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -29,7 +29,7 @@ envs:
     vaultRuntimeEnabled: true
     vaultRuntimeAddress: http://vault-dev.vault-dev.svc:8200
     vaultRuntimeKubernetesMount: kubernetes
-    vaultRuntimeRoleName: gitops-prod
+    vaultRuntimeRoleName: gitops-local
     vaultConfigEnabled: true
     vaultConfigAddress: http://vault-dev.vault-dev.svc:8200
     vaultConfigKubernetesHost: https://kubernetes.default.svc
