fix(umbrella): grant Vault k8s role to gitops/pipelines/app namespaces for local

--- a/charts/bitiq-umbrella/templates/app-eso-vault-examples.yaml
+++ b/charts/bitiq-umbrella/templates/app-eso-vault-examples.yaml
@@ -88,6 +88,8 @@ spec:
         roles:
           - name: {{ .Values.vault.config.roleName | default (printf "gitops-%s" .Values.env) | quote }}
             targetNamespaces:
+              - {{ .Values.gitopsNamespace }}
+              - {{ .Values.pipelinesNamespace }}
               - {{ .Values.appNamespace }}
             targetServiceAccounts:
               - default
